# Banana

./: .gitignore  README.md  com.lunakittyyy.Banana.json  com.lunakittyyy.Banana.json~  meson.build
data/: com.lunakittyyy.Banana.desktop.in  com.lunakittyyy.Banana.gschema.xml  com.lunakittyyy.Banana.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  banana.gresource.xml  main-window.ui  main-window.vala  main.vala  meson.build
src/onboarding/: onboarding-window.ui  onboarding-window.vala
